# music

./: .clang-format  CMakeLists.txt  apptainer.def  make.sh
backup/c-v1/: make.sh
backup/c-v1/include/: download.h
backup/c-v1/src/: database.c  download.c
backup/c-v1/tests/: test.c
backup/c-v2/include/: database.h  decode.h  dir.h
backup/c-v2/src/: config.c  download.c  log.c  main.c  util.c
backup/c-v2/tests/: test.c
backup/c/include/: random.h
backup/c/src/: config.c  random.c
backup/cpp-v1/include/: database.hpp  random.hpp
backup/cpp-v1/src/: utils.cpp
backup/cpp-v2/include/: database.hpp  decoder.hpp  dir.hpp  random.hpp  utils.hpp
backup/cpp-v2/src/: database.cpp  decoder.cpp  downloader.cpp  main.cpp  utils.cpp
backup/cpp/include/: decoder.hpp  utils.hpp
backup/cpp/src/: decoder.cpp
backup/include/: database.h  dir.h
include/: config.h  const.h  const.hpp  database.hpp  decode.h  decoder.h  decoder.hpp  dir.hpp  download.h  downloader.h  downloader.hpp  ffmpeg.h  fmtlog-inl.hpp  fmtlog.hpp  log.h  mpv.h  random.hpp  thread_pool.hpp  thread_safe_queue.hpp  track.h  util.h  utils.h  utils.hpp  websocket.h
src/: config.c  database.c  database.cpp  decode.c  decoder.c  decoder.cpp  dir.c  dir.cpp  download.c  downloader.c  downloader.cpp  ffmpeg.c  main.c  main.cpp  mpv.c  random.c  random.cpp  test.c  track.c  util.c  utils.c  utils.cpp  websocket.c
tests/: test.c
view/: ws.html
